# rtdag

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  build-omp.sh  calibrate.sh  main.cpp  minimal-fred.yaml  minimal.yaml  omp-build.sh  omp-cpu-compare.sh  test-calibration-single.yaml
build-cross/: rtdag_config.h
build-cross/CPM_modules/: Findyaml-cpp.cmake
cmake/: util.cmake
examples/: cpu-overload.yaml  minimal-fred.yaml  minimal-omp.yaml  minimal.yaml
include/: input_yaml.h
scripts/: converge_calibration.sh  dagc2rtdag.py  omp-build.sh  omp-cpu-compare.sh  omp-init.sh  rtdag.sh
scripts/pikeos/: rtdag_calibrate.sh  rtdag_converge_calibration.sh
src/: CMakeLists.txt  gausstest.cpp  hellogauss.c  hellogauss.h  hellogauss.sh  input.h  input_base.h  input_yaml.h  logging.h  multi_queue.h  periodic_task.cpp  periodic_task.h  rtdag_calib.cpp  rtdag_calib.h  rtdag_command.h  rtdag_config.h.in  rtdag_main.cpp  rtdag_run.h  rtgauss.cpp  rtgauss.h  sched_defs.h  task_set.h  time_aux.c  time_aux.cpp  time_aux.h
src/daginput/: input.h  input_base.h  input_header.h  input_wrapper.h  input_yaml.h
src/dagtask/: sched_defs.h  task_set.h
src/input/: base.h  header.h  input.h  yaml.cpp  yaml.h
src/logging/: log.h  logging.h
src/newstuff/: integers.h  mqueue.h  mtime.h  rtask.cpp  rtask.h  schedutils.cpp  schedutils.h  taskset.cpp  taskset.h
src/old/: dag.h  main.cpp
src/old/common/: notes.c  table.c
src/old/common/include/: common.h  log.h  table.h
src/old/include/: circular_buffer.h  circular_shm.h  task_set.h
src/periodic_timing/: hellogauss.h  time_aux.h
src/trash/: gausstest.cpp  task_set.h
testing_examples/: mini.cpp  reader_circ.cpp  readme.md  thread_v2.cpp  thread_v3.cpp  writer_circ.cpp
toolchains/: elinos.cmake  xilinx-pikeos.cmake
tools/rt-dag/rt-dag/: CMakeLists.txt  LICENSE  calibrate.sh  converge_calibration.sh  cpu-overload.yaml  cpufreq-max.sh  dag.h  main.cpp  minimal-acc.yaml  minimal-fred.yaml  minimal.yaml  multi_queue.h  opencl.cpp  opencl.hpp  readme.md  test_calibration.sh  test_distribution.sh  test_multi_queue.c
tools/rt-dag/rt-dag/include/: circular_comm.h  circular_shm.h  input_header.h  input_wrapper.h  input_yaml.h  sched_defs.h  shared_mem_type.h  task_set.h
tools/rt-dag/rt-dag/testing_examples/: CMakeLists.txt  mini.cpp  thread_circ.cpp
